# napari-segmentation-correction

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_segmentation_correction/: __init__.py  _custom_table_widget.py  _layer_dropdown.py  _plot_widget.py  _widget.py  color_feature_widget.py  connected_components.py  copy_label_widget.py  cross_widget.py  custom_table_widget.py  dimension_widget.py  erosion_dilation_widget.py  image_calculator.py  label_boundaries.py  label_interpolator.py  label_option_layer.py  layer_controls.py  layer_dropdown.py  layer_manager.py  main_widget.py  multiple_view_widget.py  napari.yaml  napari_multiple_view_widget.py  plane_slider_widget.py  plot_widget.py  point_filter.py  process_actions_helpers.py  prop_filter_widget.py  regionprops_extended.py  regionprops_widget.py  save_labels_widget.py  select_delete_widget.py  size_filter_widget.py  smoothing_widget.py  threshold_widget.py  toolwidgets.py  view3D.py
src/napari_segmentation_correction/_tests/: conftest.py  test2d.tif  test_action_functions.py  test_actions.py  test_copy_label.py  test_custom_table.py  test_layer_control_widgets.py  test_layer_controls.py  test_regionprop_widget.py  test_select_delete_by_mask.py
src/napari_segmentation_correction/helpers/: base_tool_widget.py  layer_dropdown.py  process_actions_helpers.py
src/napari_segmentation_correction/layer_control_widgets/: __init__.py  convert_to_numpy.py  copy_label_widget.py  dimension_widget.py  layer_manager.py  save_labels_widget.py
src/napari_segmentation_correction/regionprops/: __init__.py  color_feature_widget.py  custom_table_widget.py  prop_filter_widget.py  regionprops_extended.py
src/napari_segmentation_correction/tool_widgets/: connected_components.py  erosion_dilation_widget.py  image_calculator.py  label_boundaries.py  label_interpolator.py  select_delete_widget.py  smoothing_widget.py  threshold_widget.py
src/napari_segmentation_toolbox/: layer_controls.py  main_widget.py  napari.yaml  plane_slider_widget.py  plot_widget.py  regionprops_widget.py  toolwidgets.py
src/napari_segmentation_toolbox/_tests/: conftest.py  test2d.tif  test3d.tif  test4d.tif  test_action_functions.py  test_actions.py  test_copy_label.py  test_custom_table.py  test_layer_control_widgets.py  test_measure_regionprops.py  test_regionprop_widget.py  test_select_delete_by_mask.py
src/napari_segmentation_toolbox/helpers/: base_tool_widget.py  layer_dropdown.py  process_actions_helpers.py
src/napari_segmentation_toolbox/layer_control_widgets/: convert_to_numpy.py  copy_label_widget.py  dimension_widget.py  save_labels_widget.py
src/napari_segmentation_toolbox/regionprops/: color_feature_widget.py  custom_table_widget.py  prop_filter_widget.py
src/napari_segmentation_toolbox/tool_widgets/: connected_components.py  erosion_dilation_widget.py  image_calculator.py  label_boundaries.py  label_interpolator.py  select_delete_widget.py  smoothing_widget.py  threshold_widget.py
