[metadata]
name = napari-segmentation-toolbox
version = attr: napari_segmentation_toolbox.__version__
description = A plugin for manually correcting cell segmentation in 3D (z, y, x) or 4D (t, z, y, x) (virtual) arrays.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnniekStok/napari-segmentation-toolbox
author = Anniek Stokkermans
author_email = anniek.stokkermans@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/AnniekStok/napari-segmentation-toolbox/issues
    Documentation = https://github.com/AnniekStok/napari-segmentation-toolbox#README.md
    Source Code = https://github.com/AnniekStok/napari-segmentation-toolbox
    User Support = https://github.com/AnniekStok/napari-segmentation-toolbox/issues

[options]
packages = find:
install_requires =
    napari >= 0.6.0
    numpy
    scikit-image >= 0.24.0
    scipy >= 1.15.0
    dask_image
    dask
    matplotlib
    imagecodecs
    napari-orthogonal-views >= 0.0.7

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-segmentation-toolbox = napari_segmentation_toolbox:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt
    napari[qt]  # test with napari's default Qt bindings

[options.package_data]
* = *.yaml
